<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name" translatable="false">Companion Device</string>
    <string name="settings_entry_title">Companion Device</string>
    <string name="default_device_name">Associated Device</string>
    <string name="add_device_title">Connect to companion app</string>
    <string name="add_associated_device_title">Connect to MyCompanion</string>
    <string name="add_associated_device_subtitle">You can use your phone as a companion device to help manage your driving experience</string>
    <string name="add_associated_device_button" translatable="false">Add new device</string>
    <string name="associated_device_install_app">Make sure you have <b>Companion App</b> installed on your phone</string>
    <string name="open_companion_app_instruction_text">Open the companion app</string>
    <string name="enable_bluetooth_instruction_text">Allow Bluetooth connection</string>
    <string name="connect_to_targe_car_instruction_text">Connect to &lt;b><xliff:g id="car_name" example="MyVehicle">%1$s</xliff:g>&lt;/b> <xliff:g id="advertised_car_name" example="(Vehicle 0000)">%2$s</xliff:g></string>
    <string name="qr_instruction_text">Use your phone to scan the QR code or open MyCompanion to connect to &lt;b><xliff:g id="car_name" example="MyVehicle">%1$s</xliff:g>&lt;/b> <xliff:g id="advertised_car_name" example="(Vehicle 0000)">%2$s</xliff:g></string>
    <string name="connect_to_car_instruction_text">Connect to the&#160;car</string>
    <string name="associated_device_pairing_code_title">Confirm code on phone</string>
    <string name="associated_device_pairing_message">Confirm that this matches the code shown on your phone</string>
    <string name="associated_device_success">Device has been associated successfully</string>
    <string name="associated_device_select_device">Open the app and connect to &lt;b><xliff:g id="car_name" example="MyCar">%1$s</xliff:g>&lt;/b></string>
    <string name="associated_device_open_app">Open the app and follow instructions in the app</string>
    <string name="remove_associated_device_title">Forget &lt;b><xliff:g id="car_name" example="MyCar">%1$s</xliff:g>&lt;/b>&#63;</string>
    <string name="remove_associated_device_message">This car will no longer be paired with this device. You will additionally need to remove this car from the Companion app.</string>
    <string name="device_removed_success_toast_text"><xliff:g id="phone_name" example="MyPhone">%1$s</xliff:g> forgotten</string>
    <string name="device_removed_failure_toast_text">Failed to forget <xliff:g id="phone_name" example="MyPhone">%1$s</xliff:g></string>
    <string name="continue_setup_toast_text">Continue setup on your phone</string>
    <string name="error_screen_title">Something went wrong</string>
    <string name="error_screen_message">Unfortunately, this screen couldn\'t display properly. Please try again.</string>
    <string name="turn_on_bluetooth_title">Turn on Bluetooth</string>
    <string name="turn_on_bluetooth_message">To set up your phone as a companion device, your car needs Bluetooth. </string>
    <string name="turn_on_bluetooth_dialog_title">Turn on Bluetooth&#63;</string>
    <string name="turn_on_bluetooth_dialog_message">To connect to your companion device, your car needs Bluetooth.</string>
    <string name="companion_not_available_dialog_title">This setting isn\’t available</string>
    <string name="companion_not_available_dialog_message">Guest profiles can\’t access CompanionDevice</string>
    <string name="companion_not_available_dialog_switch_user_message">Guest profiles can\’t access CompanionDevice. To change your profile, go to Settings > Users.</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="remove">Remove</string>
    <string name="ok">OK</string>
    <string name="connection">Connection</string>
    <string name="forget_title">Forget this device</string>
    <string name="forget">Forget</string>
    <string name="disable">Disable</string>
    <string name="enable">Enable</string>
    <string name="continue_button">Continue</string>
    <string name="retry">Try again</string>
    <string name="turn_on">Turn on</string>
    <string name="not_now">Not now</string>
    <string name="connect">Connect</string>
    <string name="disconnect">Disconnect</string>
    <string name="disconnecting">Disconnecting</string>
    <string name="skip">Skip</string>
    <string name="change_profile">Change profile</string>
    <string name="connected">Connected</string>
    <string name="notDetected">Not detected</string>
    <string name="disconnected">Disconnected</string>
    <string name="detected">Detected</string>
    <string name="unknown">Unknown</string>
    <string name="app_running_msg_channel_name">Phone text message service running</string>
    <string name="app_running_msg_notification_title">Phone text messaging service is active</string>
    <string name="app_running_msg_notification_content">Receiving text messages via companion device</string>
    <string name="trusted_device_feature_title">Unlock profile with phone</string>
    <string name="trusted_device_feature_instruction">Check your Companion App to set unlocking options</string>
    <string name="trusted_device_item_title">Let &lt;b><xliff:g id="phone_name" example="MyPhone">%1$s</xliff:g>&lt;/b> unlock my profile</string>
    <string name="device_not_connected_dialog_title">Your Companion App must be actively connected</string>
    <string name="device_not_connected_dialog_message">To turn on this feature, make sure Companion App is open on your phone. Your car and phone should have Bluetooth turned on and be near each other.</string>
    <string name="trusted_device_enrollment_success_message">&lt;b><xliff:g id="phone_name" example="MyPhone">%1$s</xliff:g>&lt;/b> can now unlock your profile</string>
    <string name="create_profile_lock_dialog_title">Create a primary profile lock</string>
    <string name="create_profile_lock_dialog_message">To use your phone to unlock your profile, you need a primary profile lock as a backup</string>
    <string name="unlock_profile_to_finish_title">Unlock your profile to finish</string>
    <string name="unlock_profile_to_finish_message">You\'ve created a new profile lock. Next, enter it again to confirm that your phone can unlock your profile automatically</string>
    <string name="disable_device_connection_text">Disconnect this device</string>
    <string name="enable_device_connection_text">Reconnect this device</string>
    <string name="trusted_device_notification_channel_name">Unlock with phone</string>
    <string name="trusted_device_notification_title">Let your phone unlock your profile</string>
    <string name="trusted_device_notification_content">Tap here to authorize this feature</string>
    <string name="trusted_device_enrollment_error_dialog_title">Something went wrong</string>
    <string name="trusted_device_enrollment_error_dialog_message">Unfortunately, this feature could not be turned on at this time. Please try again.</string>
    <string name="create_phone_lock_dialog_title">Create a screen lock on your phone</string>
    <string name="create_phone_lock_dialog_message">Your phone doesn\'t have a screen lock set. To unlock your car profile with your phone, first create a screen lock (also known as passcode) in your phone\'s settings.</string>
    <plurals name="notification_new_message">
        
        <item quantity="one">New message</item>
        
        <item quantity="other">%d new messages</item>
    </plurals>
    <string name="name_not_available">Name not available</string>
    <string name="ble_device_name_prefix">Vehicle\u00A0</string>
    <string name="uri_scheme" translatable="false">companion</string>
    <string name="uri_authority"  translatable="false">demo.companiondevice.com</string>
    <string name="uri_path"  translatable="false">associate</string>
    <string name="suw_setup_profile_title">Setup profile with phone</string>
    <string name="suw_setup_profile_content">Scan QR code to get started. If you don\'t have a MyCompanion app, you can download it on Google Play and the App Store.</string>
    <string name="suw_qr_instruction_text">Scan QR code to connect to&lt;br /&gt; &lt;b><xliff:g id="car_name" example="MyVehicle">%1$s</xliff:g>&lt;/b> <xliff:g id="advertised_car_name" example="(Vehicle 0000)">%2$s</xliff:g></string>
    <string name="claimed_device" translatable="false">This is my device</string>
    <string name="unclaimed_device" translatable="false">This is not my device</string>
    <string name="driver_device" translatable="false">My device</string>
    <string name="passenger_device" translatable="false">Passenger\'s device</string>
</resources>