<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal">
    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginTop="@dimen/title_margin_top"
        android:layout_marginStart="@dimen/content_margin"
        android:layout_marginEnd="@dimen/content_margin"
        android:gravity="center"
        android:text="@string/error_screen_title"
        android:textAppearance="@style/AssociationTitle"/>
    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginTop="@dimen/message_margin_top"
        android:layout_marginStart="@dimen/content_margin"
        android:layout_marginEnd="@dimen/content_margin"
        android:gravity="center"
        android:text="@string/error_screen_message"
        android:textAppearance="@style/AssociationMessage"/>
    <Button
        android:id="@+id/retry_button"
        android:layout_marginTop="@dimen/button_margin_top"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/retry"/>
</LinearLayout>
